--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de Solubilidad y Temperatura v14.0</title>
+    <title>Simulador de Solubilidad y Temperatura v15.0</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -114,27 +114,26 @@
             pointer-events: none;
         }
         
-        #vortex {
+        #mixing-effect {
             position: absolute;
             bottom: 0;
-            left: 50%;
-            width: 0;
-            height: 0;
-            border-left: 30px solid transparent;
-            border-right: 30px solid transparent;
-            border-bottom: 60px solid rgba(255, 255, 255, 0.1);
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle at 50% 80%, rgba(255,255,255,0.15) 0%, rgba(255,255,255,0) 60%);
             opacity: 0;
             transform-origin: bottom center;
+            pointer-events: none;
         }
 
-        #vortex.active {
-            animation: vortex-swirl 1.5s ease-out forwards;
+        #mixing-effect.active {
+            animation: mix-swirl 1.5s ease-out;
         }
 
-        @keyframes vortex-swirl {
-            0% { transform: translateX(-50%) scaleY(0.1) rotate(0deg); opacity: 0; }
-            30% { transform: translateX(-50%) scaleY(1) rotate(720deg); opacity: 1; }
-            100% { transform: translateX(-50%) scaleY(0.1) rotate(1080deg); opacity: 0; }
+        @keyframes mix-swirl {
+            0% { transform: scale(0.1) rotate(0deg); opacity: 0; }
+            30% { transform: scale(1) rotate(-360deg); opacity: 0.8; }
+            100% { transform: scale(0.1) rotate(-720deg); opacity: 0; }
         }
 
         @keyframes rise {
@@ -244,7 +243,7 @@
 
                 <div class="beaker">
                     <div id="solution">
-                        <div id="vortex"></div>
+                        <div id="mixing-effect"></div>
                     </div>
                     <div id="precipitate-container">
                         <div id="precipitate"></div>
@@ -477,7 +476,7 @@
 
         const dom = {
             solution: document.getElementById('solution'),
-            vortex: document.getElementById('vortex'),
+            mixingEffect: document.getElementById('mixing-effect'),
             precipitate: document.getElementById('precipitate'),
             precipitateContainer: document.getElementById('precipitate-container'),
             volumeDisplay: document.getElementById('volume-display'),
@@ -549,22 +548,24 @@
             }
         }
         
-        function createCrystalPattern(color) {
+       function createCrystalPattern(color) {
             const rgbColor = `rgba(${color[0]}, ${color[1]}, ${color[2]}, 0.9)`;
-            const svg = `<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30'>
+            const svg = `<svg xmlns='http://www.w3.org/2000/svg' width='20' height='20'>
                 <defs>
-                    <pattern id='crystalPattern' patternUnits='userSpaceOnUse' width='30' height='30'>
+                    <pattern id='crystalPattern' patternUnits='userSpaceOnUse' width='20' height='20'>
                         <g fill='${rgbColor}'>
-                            <path d='M15 0 L30 15 L15 30 L0 15 Z' transform='rotate(15 15 15) scale(0.8)'/>
-                            <path d='M5 5 L15 10 L5 15 Z' transform='rotate(-30 10 10)'/>
-                             <path d='M25 25 L15 20 L25 15 Z' transform='rotate(30 20 20)'/>
+                            <circle cx='5' cy='5' r='3' opacity='0.8'/>
+                            <circle cx='15' cy='15' r='2' opacity='0.7'/>
+                            <circle cx='10' cy='2' r='1.5' opacity='0.9'/>
+                            <circle cx='2' cy='16' r='2.5' opacity='0.8'/>
                         </g>
                     </pattern>
                 </defs>
-                <rect width='30' height='30' fill='url(#crystalPattern)'/>
+                <rect width='20' height='20' fill='url(#crystalPattern)'/>
             </svg>`;
             return `url(data:image/svg+xml;base64,${btoa(svg)})`;
         }
+
 
         function updateBeakerView(molarity, maxSolubility, excessMoles) {
             const solute = SOLUTES[state.selectedSoluteKey];
@@ -656,12 +657,10 @@
             update();
         }
 
-        function triggerVortex(intensity = 1) {
-            dom.vortex.style.transform = `translateX(-50%) scaleY(${intensity})`;
-            dom.vortex.classList.remove('active');
-            // Use a reflow trick to restart the animation
-            void dom.vortex.offsetWidth; 
-            dom.vortex.classList.add('active');
+        function triggerMixingEffect() {
+            dom.mixingEffect.classList.remove('active');
+            void dom.mixingEffect.offsetWidth; // Reflow trick
+            dom.mixingEffect.classList.add('active');
         }
 
         function createStream(x, y, isDrain = false, color = '#3B82F6') {
@@ -712,7 +711,7 @@
                 const streamX = beakerRect.left + beakerRect.width / 2 - simContainerRect.left;
                 const streamY = beakerRect.top - simContainerRect.top;
                 createStream(streamX, streamY);
-                triggerVortex(1.0);
+                triggerMixingEffect();
                 update();
             }
         }
@@ -1038,7 +1037,7 @@
                         lastPourTime = now;
                         const molesToAdd = 0.05;
                         state.soluteMoles += molesToAdd; 
-                        triggerVortex(0.5);
+                        triggerMixingEffect();
                         const solute = SOLUTES[state.selectedSoluteKey];
                         const simContainerRect = dom.streamContainer.getBoundingClientRect();
                         const startY = shakerRect.bottom - simContainerRect.top - 20;
